--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -117,3 +117,43 @@ $phone-status-bar-height: 24px - 12px;
         }
     }
 }
+
+////////////////////////////////////////////////////////////
+.commentbox1 {
+    border-top: 2px solid #EEEEEE;
+    margin-bottom: 10px;
+    padding-top: 10px;
+}
+.commentbox0 {
+    margin-bottom: 10px;
+}
+.content2, .content3, .content4, .content5, .content6, .content7, .content8, .content9 {
+    border-left: 2px solid #EEEEEE;
+    padding-left: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.content1 {
+    margin-left: 0px;
+    padding-left: 0px;
+}
+.id {
+    font-size: 14px;
+    color: grey;    
+}
+.jp {
+    display: none;
+}
+.op {
+    font-weight: 700;
+    color: #03a9f4ad;
+}
+#twolang:checked ~ div span.jp {
+    display: block;
+}
+label {
+    cursor: pointer;
+}
+.content {
+    white-space: pre-line;
+}
