--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -129,8 +129,8 @@ $phone-status-bar-height: 24px - 12px;
 }
 .content2, .content3, .content4, .content5, .content6, .content7, .content8, .content9 {
     border-left: 2px solid #EEEEEE;
-    padding-left: 10px;
-    margin-left: 10px;
+    padding-left: 5px;
+    margin-left: 5px;
     margin-top: 10px;
 }
 .content1 {
@@ -159,4 +159,7 @@ label {
 }
 .md-toolbar--fixed {
     position: absolute;
+}
+#main-content > div > div > div > div.md-grid.md-cell--9.post-page-contents.mobile-fix.post-overlap-mobile > div.md-paper.md-paper--1.md-card.md-background--card.md-grid.md-cell.md-cell--12.post > section > div:nth-child(3) > div > p {
+    overflow: auto;
 }
