--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -143,6 +143,7 @@ $phone-status-bar-height: 24px - 12px;
 }
 .jp {
     display: none;
+    background-color: #abe5ff14;
 }
 .op {
     font-weight: 700;
