share section width fix (removing flex in css)

--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -42,7 +42,7 @@ $phone-status-bar-height: 24px - 12px;
     }
 
     .post {
-        display: flex;
+        /* display: flex; */
         flex-direction: column;
         justify-content: center;
 
