.jp effecient css selector, IE media query, small markdown changes

--- a/src/components/PostPreview/PostPreview.scss
+++ b/src/components/PostPreview/PostPreview.scss
@@ -24,3 +24,9 @@
         font-size: 12px;
     }
 }
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    img {
+        height: auto !important;
+        top: -80% !important;
+    }
+}
