--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -149,7 +149,7 @@ $phone-status-bar-height: 24px - 12px;
     font-weight: 700;
     color: #03a9f4ad;
 }
-#twolang:checked ~ div .jp {
+#twolang:checked ~ .commentbox0 .jp, #twolang:checked ~ .commentbox1 .jp {
     display: block;
 }
 label {
