--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -13,3 +13,22 @@
         }
     }
 }
+.pagination {
+    text-align: center;
+    margin: 0 auto;
+}
+.pagination a {
+    display: inline-block;
+    color: white;    
+    padding: 0px 10px;
+    margin: 0;
+    text-decoration: none;
+    font-size: 1.4em;
+}
+.pagination a.active {
+    background-color: white;
+    color: #03a9f4;
+}
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
+}
